# hse_ai_traffic_anomalies

./: .gitignore  .isort.cfg  LICENSE  README.md  pyproject.toml  ruff.toml
.postman/: config.json
EDA/: eda.ipynb  eda.md
backend/: Makefile  alembic.ini  docker-compose.gpu.yaml  docker-compose.yaml  jwtRS256.key  jwtRS256.key.pub  pyproject.toml  requirements.txt
backend/Dockerfiles/service/: Dockerfile
backend/Dockerfiles/service_gpu/: Dockerfile
backend/bootstrap/: env.example
backend/src/: config.py  deps.py  main.py
backend/src/adapters/: uow.py
backend/src/adapters/database/: models.py  sqlalchemy.py
backend/src/adapters/database/migrations/: env.py
backend/src/adapters/database/migrations/versions/: 835fb44161c6_add_users.py  bd46d029d262_update_history_table.py  c020cec92e2b_add_users_api_token_with_o2m_.py  d1cd196689a5_add_users_roles.py  f627813bb89a_add_history_and_files_table.py
backend/src/adapters/repository/sqlalchemy/: base.py  file.py  history.py  token.py  user.py
backend/src/adapters/storage/: minio.py
backend/src/api/http/v1/: middleware.py  routers.py  schemas.py  security.py
backend/src/application/: analysis_queue.py  uow_manager.py  usecase.py
backend/src/domain/: dto.py  entity.py  errors.py  requirements.txt  uow.py
backend/src/domain/auth/: dto.py  entity.py  errors.py  repository.py  service.py
backend/src/domain/file/: dto.py  entity.py  error.py  repository.py  service.py
backend/src/domain/history/: dto.py  entity.py  error.py  service.py
backend/src/domain/user/: dto.py  entity.py  error.py  repository.py  service.py
core/: pyproject.toml  requirements.txt
core/time_series/: pcap_converter.py  ts_models.py  wrapper.py
frontend/: eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx  Layout.tsx  authPage.tsx  config.ts  index.css  main.tsx
frontend/src/components/ui/: color-mode.tsx  provider.tsx
frontend/src/errors/: auth.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/account/: index.ts  page.tsx
frontend/src/pages/account/hooks/: useTokens.ts  useUser.ts
frontend/src/pages/account/services/: createTokenRequest.ts  fetchTokensData.ts  fetchUserData.ts
frontend/src/pages/account/types/: token.ts  user.ts
frontend/src/pages/history/: index.ts  page.tsx
frontend/src/pages/history/hooks/: useHistory.ts
frontend/src/pages/history/service/: pollItems.ts
frontend/src/pages/history/types/: analyzedFile.ts
frontend/src/pages/main/: chartsContainer.tsx  contentContainer.tsx  fileInputForm.tsx  index.ts  page.tsx
frontend/src/pages/main/hooks/: useForm.tsx
frontend/src/pages/main/services/: pollFiles.ts  postFiles.ts
frontend/src/services/: authFetch.ts  tokenStore.ts
frontend/src/types/: base.ts  token.ts
frontend/src/utils/: fileSize.ts
postman/globals/: workspace.postman_globals.json
research/: pcap_ts_anomaly_demo.ipynb  research.md
