[tool.poetry]
name = "hse-ai-traffic-anomalies"
version = "0.1.0"
description = "This project is focused on detecting anomalies in network traffic using ML and DL methodologies. Created as annual project of HSE FCS students."
authors = ["Ivan Rotankov, Artemy Kasyanik"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
ruff = "^0.13.3"
isort = "^6.1.0"
flake8 = "^7.3.0"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
matplotlib = "^3.10.7"
scipy = "^1.16.3"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
jupyterlab = "^4.4.10"
scikit-learn = "^1.7.2"
hdbscan = "^0.8.40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
