[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.127.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
    "asyncpg>=0.31.0",
    "greenlet>=3.3.0",
    "pyjwt>=2.10.1",
    "pwdlib[argon2]>=0.3.0",
    "fernet>=1.0.1",
    "requests>=2.32.5",
]
